# Neuron

./: display.py  editor.py  gui.py  gui.py3  main.py  pyproject.toml  readme.md  root.py  styles.py  tagsearch.py  tempCodeRunnerFile.py
Editor/: display.py  dropdown.py  editor.py  tagList.py  tagsearch.py  titlebar.py
GUI/: display.py  editor.py  menu.py  root.py  styles.py  tagsearch.py  tempCodeRunnerFile.py  titlebar.py
Menu/: menu.py
Tags/: tagList.py  tagsearch.py
src/: __init__.py  window.py
