[tool.poetry]
name = "neuron"
version = "0.1.0"
description = "A markdown text editor"
authors = ["pardun"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
markdown = "^3.4.1"
types-markdown = "^3.4.2.1"
pyqt5 = "^5.15.7"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
